--- a/src/ui/website/src/components/elements/links/LinkCard.module.scss
+++ b/src/ui/website/src/components/elements/links/LinkCard.module.scss
@@ -1,21 +1,27 @@
 .link-item {
-   //    background-color: #2d333b;
-   display: inline-flex;
-   //    outline: 1px solid #444c56;
-   //    border-radius: 8px;
+   align-self: flex-start;
+   background-color: #2d333b;
+   border: 1px solid #444c56;
+   color: #adbac7;
+   display: flex;
+   flex-direction: column;
+   height: auto;
    min-width: 23%;
    max-width: 32%;
 
    transition: transform 0.3s ease, box-shadow 0.3s ease; /* Add transitions for smooth animation */
 
    &:hover {
-      transform: scale(1.05) translateY(-5px); /* Grow the element by 5% and shift it 5 pixels upwards on hover */
+      transform: scale(1.025) translateY(-5px); /* Grow the element by 5% and shift it 5 pixels upwards on hover */
       box-shadow: 0 0 20px 5px rgba(255, 255, 255, 0.1); /* Add a glow effect with a white color */
    }
 
+   .body {
+   }
+
    img {
-      //  width: 100%;
-      //  height: auto;
+      width: 100%;
+      height: auto;
       border-radius: 8px;
    }
 
@@ -32,15 +38,7 @@
    }
 
    .tags {
-      //   margin-top: auto;
-      //   margin-left: -10px;
-      //   margin-right: -10px;
       background-color: #1c2128;
-      //   padding: 10px;
-      //   border-top: 1px solid #ccc;
-      //   display: flex;
-      //   gap: 10px;
-      //   border-radius: 0px 0px 8px 8px;
 
       .tag {
          display: inline-block;
