--- a/src/ui/website/src/components/elements/links/LinkCard.module.scss
+++ b/src/ui/website/src/components/elements/links/LinkCard.module.scss
@@ -1,5 +1,5 @@
 .link-item {
-   align-self: flex-start;
+   //    align-self: flex-start;
    background-color: #2d333b;
    border: 1px solid #444c56;
    color: #adbac7;
@@ -7,16 +7,18 @@
    flex-direction: column;
    height: auto;
    min-width: 23%;
-   max-width: 32%;
+   max-width: 24%;
+   margin-bottom: 1rem;
+
+   a {
+      flex: 1;
+   }
 
    transition: transform 0.3s ease, box-shadow 0.3s ease; /* Add transitions for smooth animation */
 
    &:hover {
       transform: scale(1.025) translateY(-5px); /* Grow the element by 5% and shift it 5 pixels upwards on hover */
       box-shadow: 0 0 20px 5px rgba(255, 255, 255, 0.1); /* Add a glow effect with a white color */
-   }
-
-   .body {
    }
 
    img {
@@ -37,17 +39,18 @@
       color: #adbac7;
    }
 
-   .tags {
+   .footer-tags {
       background-color: #1c2128;
+      padding: 0.5rem;
 
       .tag {
-         display: inline-block;
-         background-color: #ff0100;
-         color: #fff;
-         padding: 0.2rem 0.5rem;
-         border-radius: 2px;
-         font-size: 0.8rem;
-         margin-right: 0.5rem;
+         //  display: inline-block;
+         //  background-color: #ff0100;
+         //  color: #fff;
+         //  padding: 0.2rem 0.5rem;
+         //  border-radius: 2px;
+         //  font-size: 0.8rem;
+         //  margin-right: 0.5rem;
       }
    }
 }
