--- a/src/ui/website/src/styles/globals.scss
+++ b/src/ui/website/src/styles/globals.scss
@@ -17,15 +17,9 @@ body {
    color: #d90502;
 }
 
-// body {
-//    color: rgb(var(--foreground-rgb));
-//    background: linear-gradient(
-//          to bottom,
-//          transparent,
-//          rgb(var(--background-end-rgb))
-//       )
-//       rgb(var(--background-start-rgb));
-// }
+.bg-deliscio {
+   background-color: #d90502;
+}
 
 main {
    flex: 1;
@@ -34,6 +28,19 @@ main {
    padding: 2rem;
    display: flex;
    flex-direction: row;
+}
+
+aside {
+   display: none;
+   flex-direction: column;
+   width: 33%;
+}
+
+@media (min-width: 768px) {
+   /* Default is hidden. Display if screen is larger than 768px */
+   aside {
+      display: flex;
+   }
 }
 
 a {
