--- a/src/ui/website/src/components/elements/links/LinkCard.module.scss
+++ b/src/ui/website/src/components/elements/links/LinkCard.module.scss
@@ -1,7 +1,8 @@
 .link-item {
    //    align-self: flex-start;
    background-color: #2d333b;
-   border: 1px solid #444c56;
+   border: 2px solid #444c56;
+   border-radius: 0.75rem;
    color: #adbac7;
    display: flex;
    flex-direction: column;
@@ -9,6 +10,7 @@
    min-width: 23%;
    max-width: 24%;
    margin-bottom: 1rem;
+   padding: 2px;
 
    a {
       flex: 1;
