--- a/src/ui/website/src/components/elements/navigation/Navigation.module.scss
+++ b/src/ui/website/src/components/elements/navigation/Navigation.module.scss
@@ -4,7 +4,7 @@
    padding: 1rem 0;
 
    nav {
-      max-width: 1200px;
+      //   max-width: 1200px;
 
       ul {
          list-style-type: none;
