--- a/src/ui/website/src/components/elements/tags/Tags.module.scss
+++ b/src/ui/website/src/components/elements/tags/Tags.module.scss
@@ -13,7 +13,20 @@
 }
 
 .tag-pills {
-   span:not(:first-of-type) {
-      margin-left: 0.5rem;
+   span {
+      border-radius: 0.5rem;
+      font-size: 0.75rem;
+      margin: 0;
+      margin-bottom: 0.5rem;
+      margin-right: 0.5rem;
+      padding: 0.25em 0.5em;
+
+      &:last-of-type {
+         margin-right: 0;
+      }
+
+      &:not(:first-of-type) {
+         // margin-right: 0.5rem;
+      }
    }
 }
