--- a/src/ui/website/src/styles/globals.scss
+++ b/src/ui/website/src/styles/globals.scss
@@ -6,8 +6,10 @@
 
 html,
 body {
-   background-color: #22272e;
-   color: #adbac7;
+   background-color: #d0d0d0;
+   color: #22272e;
+   display: flex;
+   flex-direction: column;
    min-height: 100vh;
    max-width: 100vw;
    overflow-x: hidden;
@@ -23,7 +25,6 @@ body {
 
 main {
    flex: 1;
-   //    max-width: 1200px;
    margin: 0 auto;
    padding: 0 2rem;
    display: flex;
