Links pages Links' Detail page Functional Tests

--- a/src/ui/mvc/Views/Links/Index.cshtml
+++ b/src/ui/mvc/Views/Links/Index.cshtml
@@ -1,5 +1,4 @@
-@using Deliscio.Web.Mvc.ViewComponents.TagCloud
-@model Deliscio.Web.Mvc.ViewModels.Home.HomePageViewModel
+@model Deliscio.Web.Mvc.ViewModels.Links.LinksPageViewModel
 
 @{
     ViewBag.PageTitle = Model.PageTitle;
@@ -18,7 +17,7 @@
     </div>
     <div class="flex-shrink-0 pe-4" style="width: 30%; max-width: 400px">
 
-       <vc:tag-cloud count="100"></vc:tag-cloud>
+        <vc:tag-cloud count="100"></vc:tag-cloud>
     </div>
 </div>
 
