--- a/src/ui/mvc/Views/Shared/Navigation/_Breadcrumbs.cshtml
+++ b/src/ui/mvc/Views/Shared/Navigation/_Breadcrumbs.cshtml
@@ -1,9 +1,29 @@
+@{
+    var breadcrumbs = ViewBag.BreadCrumbs as Dictionary<string, string>;
+}
+
 <div class="breadcrumbs container-fluid">
-    <a href="/" class="text-primary" title="Home"> Home </a>
-    <a href="/page2.html" class="text-primary" title="Page 1">Page 1</a> /
-    <a href="/page3.html" class="disabled" title="Page 2" disabled="disabled">
-        Page 2
-    </a>
-    /
-    <a href="/page4.html" class="active" title="Page 4">Page 4</a>
+    @if (breadcrumbs is { Count: > 0 })
+    {
+        for(var i = 0; i < breadcrumbs.Count; i++)
+        {
+            var breadcrumb = breadcrumbs.ElementAt(i);
+
+            var text = breadcrumb.Key.Length > 50? breadcrumb.Key.Substring(0, 50) + "..." : breadcrumb.Key;
+
+            if (string.IsNullOrWhiteSpace(breadcrumb.Value) || i == breadcrumbs.Count - 1)
+            {
+                @text
+            }
+            else
+            {
+                <a href="@breadcrumb.Value" class="text-primary" title="@breadcrumb.Value">@text</a>
+            }
+
+            if (i < breadcrumbs.Count - 1)
+            {
+                <span class="mx-1">/</span>
+            }
+        }
+    }
 </div>
