--- a/src/ui/mvc/Views/Home/Index.cshtml
+++ b/src/ui/mvc/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
     ViewBag.PageDescription = Model.PageDescription;
     ViewBag.CanonicalUrl = Model.CanonicalUrl;
 
-    var links = Model.Links;
+    var links = Model.Results;
 }
 
 <div class="d-flex flex-grow-1 me-4">
@@ -14,10 +14,14 @@
         @{
             await Html.RenderPartialAsync("Links/_LinkCards", links.Results);
         }
-        <div id="pager-container" data-pageno="@links.PageNumber" data-size="@links.PageSize" data-pages="@links.TotalPages" data-results="@links.TotalResults" data-url="/links"></div>
+        <div id="pager-container" 
+             data-pageno="@links.PageNumber" 
+             data-size="@links.PageSize" 
+             data-pages="@links.TotalPages" 
+             data-results="@links.TotalResults" 
+             data-url="/links"></div>
     </div>
     <div class="flex-shrink-0 pe-4" style="width: 30%; max-width: 400px">
-
        <vc:tag-cloud count="100"></vc:tag-cloud>
     </div>
 </div>
