LOTS of updates + Admin   + Links page   + Edit Link
+ Renamed some Queries
+ Moved some Handlers into their Queries class

+ Updated packages

--- a/src/ui/admin/mvc/Deliscio.Admin/Views/Home/Index.cshtml
+++ b/src/ui/admin/mvc/Deliscio.Admin/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
     <div id="pager-container"></div>
 </div>
 
-@* @section Scripts {
+@section Scripts {
     <script type="module" src="./js/Pager.bundle.mjs"></script>
     <script type="module">
         var pager = () => Pager({
@@ -21,4 +21,4 @@
         });
         pager.render();
     </script>
-} *@
+}
