--- a/src/ui/admin/mvc/Deliscio.Admin/Views/Shared/_Layout.cshtml
+++ b/src/ui/admin/mvc/Deliscio.Admin/Views/Shared/_Layout.cshtml
@@ -119,7 +119,7 @@
                 </div>
                 <div class="sb-sidenav-footer">
                     <div class="small">Logged in as:</div>
-                    Start Bootstrap
+                    Habaner.io
                 </div>
             </nav>
         </aside>
