--- a/src/ui/admin/mvc/Deliscio.Admin/Views/Links/Index.cshtml
+++ b/src/ui/admin/mvc/Deliscio.Admin/Views/Links/Index.cshtml
@@ -8,15 +8,15 @@
     var links = Model?.Results?.ToArray() ?? Array.Empty<LinkItem>();
 }
 
-<div class="pl-3 pr-3">
+<div id="links-list-container" class="pl-3 pr-3">
     <h1>Links</h1>
 
-    <div class="row">
-        <div class="col">
-            @* Have Search go to /links?search=term instead *@
-            <form method="get" action="" name="links-search-form">
-                <AntiforgeryToken />
-                <div class="input-group mb-3">
+    <form method="get" action="" name="links-search-form" class="">
+        <div class="row">
+            <div class="col">
+                @* Have Search go to /links?search=term instead *@
+                <div class="d-flex justify-content-evenly gap-1 px-1 py-2">
+                    @* <div class="input-group mb-3"> *@
                     <input id="txt-query"
                            type="text"
                            name="term"
@@ -39,13 +39,52 @@
                            aria-label="Search by domain name"
                            aria-describedby="button-search" />
                     <button id="button-search" class="btn btn-outline-secondary" type="submit">Search</button>
+                    @* </div> *@
                 </div>
-            </form>
+
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <div class="d-flex justify-content-evenly gap-1 px-1 py-2">
+                    <div class="form-check form-check-inline">
+                        <input id="check-isactive" class="form-check-input" type="checkbox" name="isActive" value="" />
+                        <label class="form-check-label" for="check-isactive">Is Active</label>
+                    </div>
+
+                    <div class="form-check form-check-inline">
+                        <input id="check-isflagged" class="form-check-input" type="checkbox" name="isFlagged" value="" />
+                        <label class="form-check-label" for="check-isflagged">Is Flagged</label>
+                    </div>
+
+                    <div class="form-check form-check-inline">
+                        <input id="check-isdeleted" class="form-check-input" type="checkbox" name="isDeleted" value="false" />
+                        <label class="form-check-label" for="check-isdeleted">Is Deleted</label>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </form>
+    <div class="row">
+        <div class="col">
+                <form id="frmLinks" asp-controller="Links" asp-action="Deletes" method="Post" name="links-mass-updates">
+                    <AntiforgeryToken/>
+                    <div class="d-flex justify-content-evenly gap-1 px-1 py-2 justify-content-evenly">
+                        <div>
+                            <button id="btnSelectAll" type="button" class="btn btn-primary btn-success">Select All</button>
+                        </div>
+                        <div>
+                        </div>
+                        <div>
+                            <button id="btnDeleteSelected" type="Submit" class="btn btn-primary btn-danger">Delete</button>
+                        </div>
+                    </div>
+                </form>
         </div>
     </div>
     <div class="row">
         <div class="col">
-            <table class="table table-bordered" style="border: 2px;">
+            <table id="links-table" class="table table-bordered" style="border: 2px;">
                 <thead class="thead-dark bg-secondary">
                     <tr>
                         <th class="bg-secondary-subtle" data-sort="title" data-direction="asc">Title</th>
@@ -57,9 +96,6 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td colspan="6" style="border-left: 0; border-right: 0"></td>
-                    </tr>
                     @for (var i = 0; i < links.Length; i++)
                     {
                         var link = links[i];
@@ -68,8 +104,9 @@
 
                         var bgColor = link.IsDeleted || link.IsFlagged ? "bg-danger-subtle" : !link.IsActive ? "bg-warning-subtle" : "bg-success-subtle";
                         var strike = link.IsDeleted ? "text-decoration-line-through" : string.Empty;
-                        <tr>
+                        <tr class="link-row" data-rowid="@link.Id">
                             <td class="@bgColor @strike">
+                                <input type="checkbox" id="chkDelete" data-id="@link.Id" />
                                 <a asp-controller="Links" asp-action="Details" target="_blank" asp-route-id="@link.Id">@title</a>
                             </td>
                             <td class="@bgColor @strike">
@@ -89,7 +126,7 @@
                                 @link.DateUpdated.ToLocalTime().DateTime
                             </td>
                         </tr>
-                        <tr>
+                        <tr class="link-row" data-rowid="@link.Id">
                             <td colspan="6" class="@bgColor">
                                 Tags:
                                 @for (var t = 0; t < link.Tags.Count; t++)
@@ -118,7 +155,8 @@
 
                         if (i < links.Length - 1)
                         {
-                            <tr>
+                            @* Leaves a 'gap' between rows *@
+                            <tr class="link-row">
                                 <td colspan="6" style="border-left: 0; border-right: 0"></td>
                             </tr>
                         }
@@ -143,5 +181,5 @@
 </div>
 
 @section Scripts {
-
+    <script type="module" src="/js/pages/Links/links.mjs"></script>
 }
