--- a/src/ui/mvc/Views/Shared/Tags/_TagPill.cshtml
+++ b/src/ui/mvc/Views/Shared/Tags/_TagPill.cshtml
@@ -1,4 +1,4 @@
-@model Deliscio.Web.Mvc.Models.Tags.TagModel
+@model Deliscio.Web.Mvc.ViewModels.Models.Tags.TagModel
 
 @if (!string.IsNullOrWhiteSpace(Model.Name))
 {
