--- a/src/ui/mvc/Views/Links/Details.cshtml
+++ b/src/ui/mvc/Views/Links/Details.cshtml
@@ -6,15 +6,15 @@
     ViewBag.CanonicalUrl = Model.CanonicalUrl;
 }
 
-<div class="">
+<div id="links-details-page" class="">
     <h1>@Model.Title</h1>
     <div>
         <img src="@Model.ImageUrl" alt="@Model.Title" data-src="@Model.ImageUrl" />
     </div>
     <p>@Model.Description</p>
     <a href="@Model.Url" class="btn btn-warning" title="@Model.Title" target="_blank">Go to original content</a>
-    
-    @if(Model.Tags.Count > 0)
+
+    @if (Model.Tags.Count > 0)
     {
         <div class="tags">
             @foreach (var tag in Model.Tags)
