--- a/src/ui/mvc/Views/Links/Index.cshtml
+++ b/src/ui/mvc/Views/Links/Index.cshtml
@@ -8,7 +8,7 @@
     var links = Model.Results;
 }
 
-<div class="d-flex flex-grow-1 me-4">
+<div id="links-page" class="d-flex flex-grow-1">
     <div id="links-container">
         @{
             await Html.RenderPartialAsync("Links/_LinkCards", links.Results);
