--- a/src/ui/mvc/Views/Shared/_Layout.cshtml
+++ b/src/ui/mvc/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewBag.PageTitle</title>
-    <meta name="description" content="@ViewBag.PageDescription"/>
+    <meta name="description" content="@ViewBag.PageDescription" />
 
     @if (!string.IsNullOrWhiteSpace(ViewBag.CanonicalUrl))
     {
@@ -15,9 +15,9 @@
         @if (ViewBag.AlternateUrls != null && ViewBag.AlternateUrls.Any())
         {
             @* foreach (var alternateUrl in ViewBag.AlternateUrls)
-            {
-                <link rel="alternate" href="@alternateUrl.Url" hreflang="@alternateUrl.Culture" />
-            } *@
+    {
+    <link rel="alternate" href="@alternateUrl.Url" hreflang="@alternateUrl.Culture" />
+    } *@
         }
     }
 
@@ -30,10 +30,12 @@
 
     <vc:header></vc:header>
 
-    @{ await Html.RenderPartialAsync("Navigation/_Breadcrumbs"); }
+    @{
+        await Html.RenderPartialAsync("Navigation/_Breadcrumbs");
+    }
 
-    <div class="container d-flex">
-    @RenderBody()
+    <div class="container d-flex" style="outline: 1px solid purple">
+        @RenderBody()
     </div>
 
     @await RenderSectionAsync("Scripts", required: false)
