--- a/src/ui/mvc/Views/_ViewImports.cshtml
+++ b/src/ui/mvc/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
 @using Deliscio.Web.Mvc
-@using Deliscio.Web.Mvc.Models
+@using Deliscio.Web.Mvc.ViewModels.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *,Deliscio.Web.Mvc
