--- a/src/ui/mvc/Views/Home/Index.cshtml
+++ b/src/ui/mvc/Views/Home/Index.cshtml
@@ -1,27 +1,27 @@
 @using Deliscio.Web.Mvc.ViewComponents.TagCloud
+@using Microsoft.AspNetCore.Mvc.TagHelpers
+@using Deliscio.Modules.Links.Common.Models
 @model Deliscio.Web.Mvc.ViewModels.Home.HomePageViewModel
 
 @{
     ViewBag.PageTitle = Model.PageTitle;
     ViewBag.PageDescription = Model.PageDescription;
     ViewBag.CanonicalUrl = Model.CanonicalUrl;
-
-    var links = Model?.Results;
 }
 
 <div id="home-page" class="d-flex flex-grow-1" style="outline: 1px solid red;">
     <div id="links-container" style="outline: 1px solid green;">
         @{
-            await Html.RenderPartialAsync("Links/_LinkCards", links.Results);
+            await Html.RenderPartialAsync("Links/_LinkCards", Model.Results);
         }
 
         <a asp-controller="Links" asp-action="Index" asp-route-p="1" class="btn btn-primary">More</a>
 
         <div id="pager-container"
-             data-pageno="@links.PageNumber"
-             data-size="@links.PageSize"
-             data-pages="@links.TotalPages"
-             data-total-results="@links.TotalResults"
+             data-pageno="@Model.PageNumber"
+             data-size="@Model.PageSize"
+             data-pages="@Model.TotalPages"
+             data-total-results="@Model.TotalResults"
              data-base-url="/links">
         </div>
     </div>
