--- a/src/web.admin/Deliscio.Web.Admin/Views/Shared/_Layout.cshtml
+++ b/src/web.admin/Deliscio.Web.Admin/Views/Shared/_Layout.cshtml
@@ -111,6 +111,10 @@
                             <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
                             Users
                         </a>
+                        <a class="nav-link" asp-controller="Roles" asp-action="Index">
+                            <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
+                            Roles
+                        </a>
                         <div class="sb-sidenav-menu-heading">Addons</div>
                         <a class="nav-link" href="charts.html">
                             <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
