--- a/src/web.admin/Deliscio.Web.Admin/Views/Users/Index.cshtml
+++ b/src/web.admin/Deliscio.Web.Admin/Views/Users/Index.cshtml
@@ -10,7 +10,7 @@
 <div class="row">
     <div class="col-md-12">
         <h2>Users</h2>
-        <a asp-controller="Users" asp-action="CreateForAdmin" class="btn btn-primary">CreateForAdmin</a>
+        <a asp-controller="Users" asp-action="Create" class="btn btn-primary">Create</a>
         <table class="table table-striped table-bordered table-hover">
             <thead>
                 <tr>
@@ -46,7 +46,7 @@
 
                             </td>
                             <td>@user.Email</td>
-                            <td>@string.Join(',', user.Roles.Select(r => r.Name))</td>
+                            <td>@string.Join(',', user.Roles.Select(r => r))</td>
                             <td>
                                 @*  <a href="@Url.Action("Edit", "Users", new { id = user.id })" class="btn btn-primary btn-xs">Edit</a>
                         <a href="@Url.Action("Delete", "Users", new { id = user.id })" class="btn btn-danger btn-xs">Delete</a> *@
